fix: wrapper divs of dices' dots overlapped leading to unexpected behavior

--- a/src/styles/Die.css
+++ b/src/styles/Die.css
@@ -4,6 +4,7 @@
   font-size: 3rem;
   display: block;
   line-height: 0.5rem;
+  pointer-events: none;
 }
 
 .content-die {
